--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>VegetFood</artifactId>
 	<version>1.0</version>
 	<name>VegetFood</name>
-	<description>Furama</description>
+	<description>Website using Spring boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -74,6 +74,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
